--- a/templates/administrator/administrator_base.html
+++ b/templates/administrator/administrator_base.html
@@ -43,8 +43,7 @@
     </nav>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="{% static 'images/Yara-logo-white.png' %}"
-                    alt="Yara name with a palm tree"></a>
+            <a class="navbar-brand" href="{% url 'home' %}"><span id="logo"><pan id="pc" style="color: white;">Punta Cana</pan><img id="logo-img" src="{% static 'images/excursions/coconut-tree-copy.png' %}">  <span id="explore"style="color: white;"> Explore</span><span id="initial"> PCE</span></span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
