--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -59,7 +59,7 @@
                         <!-- pick up info -->
                         <div class="form-group mt-3">
                             <label for="inputCity">Place to be pick up</label>
-                            <input type="text" class="form-control" id="inputCity" name="place_pickup" maxlength="26"
+                            <input type="text" class="form-control" id="inputCity" name="place_pickup"
                                 required>
                         </div>
                         <!-- hidden input to get the url-->
