--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -6,19 +6,23 @@
     <!-- Metas -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Explore our huge selection of excursions and places to stay in punta cana.
+    <meta name="description" content="
+    Embark on an unforgettable journey with Punta Cana Explore. Our high-quality excursions 
+    await you at 8 diverse destinations across the stunning Dominican Republic. As pioneers 
+    in the industry, we lead with excellence, offering unparalleled adventures that capture 
+    the essence of each unique location. Whether you seek tropical landscapes, cultural 
+    immersion, or thrilling escapades, Punta Cana Explore promises an experience beyond compare.
+    Explore our huge selection of excursions and places to stay in punta cana.
     Visit Saona Island, an idyllic speck of sand and palm trees in the blue Caribbean, 
     during a full-day tour from Punta Cana. Board a small speedboat for the thrilling ride out to the island, 
-    including a stop at a natural swimming pool where you can see starfish.
-     And stay in one of our beautiful rooms or rent a whole apartment with us at a very low price. 
-    ">
-    <meta name="keywords" content="punta cana, bavaro, rent, room,excursions,Visit Saona Island,
+    including a stop at a natural swimming pool where you can see starfish. low price. ">
+
+    <meta name="keywords" content="punta cana, overseas adventure, the adventure travelers, 2023, backpacking tours,explore tours,  adventure vacations, biking tours,adventure travel, bavaro, rent, room,excursions,Visit Saona Island,
     blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
      Day Trip, things to do in puntacana, puntacana tours, Scape Park Punta Cana,
       Scape Park Punta Cana, Wild Buggy Eco Adventure, Full Safari Zipline, 
-      Buggies & Horse Riding, Punta Cana Off-Road Dune, Buggy Adventure, Amazing Water Cave,tours, 
-      Horseback Riding, City Tour, Cacao Farm,  Zipline / Dune Buggy, holiday rentals, home deals, 
-      Luxury Condo, Steps Away From The Beach, ocean view, punta cana el cortecito ">
+      Buggies & Horse Riding, Hoyo Azul y Scape Park Cap Cana,Excursión de un día a isla Saona, Punta Cana Off-Road Dune, Buggy Adventure, Amazing Water Cave,tours, 
+      Horseback Riding, City Tour, Cacao Farm,  Zipline / Dune Buggy">
     <meta name="author" content="Gerson De La Cruz">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="https://myonlinerecipes.herokuapp.com/">
