Add live payment

--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -131,7 +131,7 @@
   </head>
   <!-- Include the PayPal JavaScript SDK -->
   <script
-    src="https://www.paypal.com/sdk/js?client-id=Abb4FSOQb9_SgkRmke9yVfIOIDM6qWE1QPfxUC4qDJ4N47Kx3sho53q2MncaZp9yNu1qVSknFeRBno51&currency=USD"></script>
+    src="https://www.paypal.com/sdk/js?client-id={{paypal_client_id}}&currency=USD"></script>
 
   <!-- create token -->
   <script>
