--- a/templates/excursions/excursions.html
+++ b/templates/excursions/excursions.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="price">
-                £{{excursion.Price}}
+                ${{excursion.Price}}
             </div>
         </div>
 
