--- a/templates/excursions/filters.html
+++ b/templates/excursions/filters.html
@@ -25,7 +25,7 @@
             </div>
 
             <div class="price">
-                £{{excursion.Price}}
+                ${{excursion.Price}}
             </div>
         </div>
         {% endfor %}
@@ -80,8 +80,6 @@
     </nav>
     <!--end of Pagination-->
     {%endif%}
-
-
 
 </section>
 
