--- a/templates/excursions/input_search_result.html
+++ b/templates/excursions/input_search_result.html
@@ -33,7 +33,7 @@
             </div>
 
             <div class="price">
-                £{{excursion.Price}}
+                ${{excursion.Price}}
             </div>
         </div>
 
