--- a/templates/excursions/success_page.html
+++ b/templates/excursions/success_page.html
@@ -14,7 +14,7 @@
     <div class="subcontainer">
         <h3>Discount code</h3>
         <P class="reference_code"> <span class="badge rounded-pill bg-success">{{ reference_number }}</P>
-        <p>Scan the barcode first, and then apply the discount code prior to finalizing your checkout..</p>
+        <spa>Scan the barcode first, and then apply the discount code prior to finalizing your checkout..</spa>
     </div>
         <img id="img_container" src="{% static 'images/excursions/Descuento.png' %}" alt="Italian Trulli">
     </div>
