Add better title

--- a/templates/excursions/excursions.html
+++ b/templates/excursions/excursions.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <section>
-    <h1 class="text-center mt-5"> All Excursions</h1>
+    <h1 class="text-center mt-5">Embark on Unforgettable Excursions</h1>
     <section>
         <div class="card-container mt-5">
             {% for excursion in excursions %}
