--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -29,7 +29,8 @@
     <meta name="robots" content="index, follow">
     <title>Punta cana Explore</title>
     <!-- Bootstrap 5.0.2-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/392c1ed101.js" crossorigin="anonymous"></script>
     <!-- Favicon -->
@@ -45,7 +46,11 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"><span id="logo"><pan id="pc">Punta Cana</pan><img id="logo-img" src="{% static 'images/excursions/coconut-tree-copy.png' %}">  <span id="explore"> Explore</span><span id="initial"> PCE</span></span></a>
+            <a class="navbar-brand" href="{% url 'home' %}"><span id="logo">
+                    <pan id="pc">Punta Cana</pan><img id="logo-img"
+                        src="{% static 'images/excursions/coconut-tree-copy.png' %}"> <span id="explore">
+                        Explore</span><span id="initial"> PCE</span>
+                </span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -55,12 +60,12 @@
 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="links-container">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'excursions' %}"><i class="fa-solid fa-house"></i>
-                                Home</a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'excursions' %}"><i class="fa-solid fa-house"></i>
+                            Home</a>
+                    </li>
                     <!-- Sort by -->
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown display_on_computer">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             <i class="fa-solid fa-filter"></i>Sort by
@@ -82,7 +87,7 @@
                     </li>
                     {% if not user.is_authenticated %}
                     <li class="nav-item dropdown">
-                        
+
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             <i class="fa-solid fa-user"></i> My account
@@ -137,19 +142,74 @@
                     </li>
 
                     <!-- cart -->
-                    <li class="nav-item cart">
-                        <a  style="color:white"class="nav-link btn my_hover sear-btn btn-outline-secondary position-relative" href="{% url 'excursion-cart' %}">
-                                <i class="fa-solid fa-cart-shopping"></i>
-                                {% if total %}
-                                £{{total | floatformat:2}}
-                                {% else %}
-                                £0.00
-                                {% endif %}
+                    <li class="nav-item cart display_on_computer">
+                        <a style="color:white"
+                            class="nav-link btn my_hover sear-btn btn-outline-secondary position-relative"
+                            href="{% url 'excursion-cart' %}">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            {% if total %}
+                            £{{total | floatformat:2}}
+                            {% else %}
+                            £0.00
+                            {% endif %}
                         </a>
                     </li>
                 </ul>
                 <!-- Search form -->
-                <form class="d-flex" role="search" method="get" autocomplete="on"
+                <div class="display_on_computer">
+                    <form class="d-flex" role="search" method="get" autocomplete="on"
+                        action="{% url 'excursion_search_results' %}">
+                        {% if navbar_input %}
+                        <input class="form-control me-2" type="search" name="navbar" placeholder="{{navbar_input}}"
+                            aria-label="Search">
+                        {% else %}
+                        <input class="form-control me-2" type="search" name="navbar" placeholder="Search excursions"
+                            aria-label="Search">
+                        {% endif %}
+                        <button class="btn my_hover sear-btn btn-outline-secondary" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div id="phone_search_container">
+                    <!-- cart -->
+                    <div class="nav-item cart display_on_phone">
+                        <a style="color:white" class="nav-link btn my_hover sear-btn btn-outline-secondary position-relative"
+                            href="{% url 'excursion-cart' %}">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            {% if total %}
+                            £{{total | floatformat:2}}
+                            {% else %}
+                            £0.00
+                            {% endif %}
+                        </a>
+                    </div>
+
+            <!-- Sort by -->
+            <div class="nav-item dropdown display_on_phone">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <i class="fa-solid fa-filter"></i>Sort by
+                </a>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a class="dropdown-item" href="{% url 'newest_result' %}">Sort by newest</a>
+                    </li>
+
+                    <li><a class="dropdown-item" href="{% url 'oldest_result' %}">Sort by Oldest</a>
+                    </li>
+                    <li><a class="dropdown-item" href="{% url 'filter_by_ascend' %}">Price (low to
+                            high)</a>
+                    </li>
+                    <li><a class="dropdown-item" href="{% url 'filter_by_descend' %}">Price (high to
+                            low)
+                        </a></li>
+                </ul>
+            </div>
+
+            <!-- Search form -->
+            <div class="display_on_phone" id="search_input">
+                <form class="d-flex display_on_phone" role="search" method="get" autocomplete="on"
                     action="{% url 'excursion_search_results' %}">
                     {% if navbar_input %}
                     <input class="form-control me-2" type="search" name="navbar" placeholder="{{navbar_input}}"
@@ -161,8 +221,10 @@
                     <button class="btn my_hover sear-btn btn-outline-secondary" type="submit">Search</button>
                 </form>
             </div>
+
         </div>
     </nav>
+
     <!-- flash messages -->
     <div class="message mt-3">
         {% if messages %}
