--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1268,10 +1268,14 @@ textarea::placeholder {
 
 
 }
+iframe {
+    z-index: 0 !important;
+  }
 
 @media only screen and (max-width: 780px) {
     #footer {
         height: 100px;
+        z-index: 10;
     }
     /* --detail page */
     .main-image img {
